# routes/api.php
@@ -14,6 +14,7 @@
 use App\Http\Controllers\Api\AppUserController;
 use App\Http\Controllers\Api\EvaluationController;
 use App\Http\Controllers\Api\GeneralController;
+use App\Http\Controllers\Api\OrderController;
 use App\Http\Controllers\Api\PillarController;
 use Illuminate\Support\Facades\Route;
 
@@ -22,4 +23,8 @@ Route::post('app-user/register', [AppUserController::class, 'register'])->name('
 
 Route::middleware(['jwt','jwt-auth'])->group(function () {
     Route::get('app-user/me', [AppUserController::class, 'getCurrentUser'])->name('me');
+    Route::post('orders', [OrderController::class, 'store'])->name('orders.store');
+    Route::post('orders/calculate', [OrderController::class, 'calculateTotal'])->name('orders.calculate');
+    Route::get('/orders', [OrderController::class, 'index']);
+    Route::put('/orders/{id}/status', [OrderController::class, 'updateStatus']);
 });
